Finished main operators.

--- a/data.tex
+++ b/data.tex
@@ -371,7 +371,7 @@ Ratio data are data that can be classified into categories, ordered, measured in
 units, and have a true zero.  In practice, they differ on the logical and arithmetic operations
 we can perform on them.
 
-\begin{tablebox}{Stevens’s types}
+\begin{tablebox}{Stevens’s types.}
   \centering
   \rowcolors{2}{black!10!white}{}
   \begin{tabular}{cc}
