Small comment about ZN.

--- a/project.tex
+++ b/project.tex
@@ -165,7 +165,9 @@ The phases are:
   \item Build the model: find patterns in the data that may solve the problem.
   \item Evaluate the model: is the model good enough to solve the problem?
   \item Present results and document: establish that we can solve the problem and how we
-    did it.
+    did it. (This step is a differentiator from CRISP-DM.  In ZN approach, result
+    presentation is essential; data scientists must be able to communicate their results
+    effectively to the client/sponsor.)
   \item Deploy the model: make the model available to the end users.
 \end{itemize}
 
