--- a/handling.tex
+++ b/handling.tex
@@ -280,6 +280,9 @@ contain all the columns of the original datasets.  The rows remain unchanged.
   \end{itemize}
 \end{mainbox}
 
+{\color{red} Talk about splitting as the reverse function, and the reason why missing
+columns may be a problem. Example of the unit of measurement.}
+
 \subsection{Joining datasets}
 
 Joining is the process of combining two datasets into a single dataset based on common
@@ -318,9 +321,9 @@ variations are possible.
 
 \subsection{Pivoting and unpivoting}
 
-Another important operation is to pivot and unpivot datasets.  This is the process of
+Another important operation is to pivot and unpivot datasets.  These are the processes of
 transforming a dataset from a long format to a wide format and vice versa.  The operations
-is reversible and they are the inverse of each other.
+are reversible and they are the inverse of each other.
 
 Pivoting requires to specify a name column --- whose discrete and finite possible values
 will become the names of the new columns --- and a value column --- whose values will be
