--- a/handling.tex
+++ b/handling.tex
@@ -435,15 +435,120 @@ Some thoughts about it:
     attributes (or some sort of aggregation function).
 \end{itemize}
 
+\section{Data handling pipeline}
+
+Before we study the data handling tasks, we need to understand that a data handling
+pipeline is a sequence of operations that \emph{does} depend on the input data.
+This might seem obvious, but the implications are not.
+
+A common error in data handling is to perform operations ad hoc, usually leading to data
+leakage.  For instance, one might impute missing values before splitting the data into
+training and testing sets.  This is a mistake because the imputation is based on the
+entire dataset, including the testing set.
+
+To avoid this kind of error, one must declare\footnote{This is the declarative nature of
+data handling operations.} the operations that will be performed on the data before
+applying them.  This is usually done by creating the full data handling pipeline
+beforehand.
+
+The pipeline, like a model, must be ``fitted'' to the data.  This means that parameters of
+the operations are not fixed until the first data is given as input.  Subsequent data fed
+to the pipeline will be handled keeping the first ``learned'' parameters.
+
+Consider the following example.  Suppose we have a dataset with missing values for
+variable \texttt{A}.  We want to impute the missing values and then standardize
+\texttt{A}.  The pipeline is created as follows:  \texttt{D -> impute\_zero(A) ->
+standardize(A)}.
+
+The operation \texttt{impute\_zero(A)} is parametrized by the value 0, which, in this case,
+is fixed.  However, the operation \texttt{standardize(A)} is parametrized by the mean and
+the standard deviation of the values in \texttt{A}.  These values are not fixed until the
+first data is given as input.
+
+\begin{mainbox}{A note about fixed parameters}
+  Even if your data handling pipeline contains operations that have fixed parameters and
+  can be safely applied to data before the model search, \emph{I strongly recommend} that
+  you declare the pipeline as a whole.  This is because it is easier to maintain and
+  reproduce the data handling process, especially in deployment.  Performing ad hoc
+  handling in your data is a source of errors and important transformations can be
+  forgotten when receiving new data.
+\end{mainbox}
+
+In a practical scenario, the source code of the \emph{model search} method includes not
+only strategies for the model, but also the data handling pipeline.  Moreover, the deployment
+of the model includes the data handling pipeline as well.  In other words, it does not
+matter which model is used, in the example above, the mean and the standard deviation of
+the values in \texttt{A} should be stored and used in deployed models.
+
+In terms of reproducibility and validation, having a single consolidated pipeline is
+crucial.
+
+\begin{slidebox}{Data handling pipeline}{}
+  \begin{itemize}
+    \item A data handling pipeline is a sequence of operations that depend on the input data;
+    \item The pipeline must be declared before applying the operations;
+    \item The pipeline is fitted to the data;
+    \item The selected pipeline is part of the model search and deployment.
+    \item Even operations that have fixed parameters or that can be safely applied to data
+      before the model search should be declared in the pipeline.
+  \end{itemize}
+\end{slidebox}
+
 \section{Data transformation}
 
+The first task in data handling is data transformation.  This is the process of adjusting
+the format and the types of the data to make it suitable for analysis.
+
+Usually, the starting point of data transformation is to make the data tidy, i.e., to have
+each variable in a column and each observation in a row.  Remember that, depending on the
+problem definition, we target a particular observational unit.  Having a clear picture of
+the observational unit is important to define the columns and the rows of the dataset.
+
+Then, when the data format is acceptable, we can perform a series of operations to make the
+column's types and values suitable for modeling.  The reason for this is that most
+machine learning methods require the input variables to follow some restrictions.  For
+instance, some methods require the input variables to be real numbers, others require the
+input variables are in a specific range, etc.
+
 \subsection{Reshaping}
+
+Reshaping is the process of changing the format of the data.  The most common reshaping
+operations are pivoting and unpivoting, which we have already discussed.  However, there
+are other reshaping operations that are useful in practice.
+
+For instance, one can reshape a dataset by splitting a column into multiple columns.  This
+is useful when a column contains multiple values that should be separated.  This can be
+done with mutation with appropriate expressions.  Some frameworks might provide special functions
+to do this, usually called splitting functions.
+
+We can also consider reshaping the operations of filtering, selecting, and aggregating.
+Filtering is usually done to reduce the scope of the data, given some conditions on the
+variables.  Selecting is usually done to remove irrelevant variables or highly correlated
+ones.  Aggregating in a reshaping task is usually applied together with pivoting to change the
+observational unit of the dataset.
+
+\begin{slidebox}{Reshaping}{}
+  \begin{itemize}
+    \item Reshaping is the process of changing the format of the data;
+    \item The most common reshaping operations are pivoting and unpivoting;
+    \item Other common operation include:
+      \begin{itemize}
+        \item Splitting a column into multiple columns;
+        \item Filtering to reduce the scope of the data;
+        \item Selecting to remove irrelevant variables or highly correlated ones;
+        \item Aggregating to change the observational unit of the dataset.
+      \end{itemize}
+  \end{itemize}
+\end{slidebox}
+
+\subsection{Type conversion}
+
+\subsection{Normalization}
 
 \subsection{Sampling}
 
 \subsection{Dimensionality reduction}
 
-\subsection{Normalization}
 
 \begin{mainbox}{Practice!}
   Can you identify which data transformation operations are used to make datasets
@@ -465,5 +570,6 @@ Some thoughts about it:
 \subsection{Merging}
 
 \subsection{Concatenating}
+
 
 % vim: spell spelllang=en
