--- a/handling.tex
+++ b/handling.tex
@@ -610,6 +610,30 @@ values.
 
 \subsection{Dimensionality reduction}
 
+Dimensionality reduction is the process of reducing the number of variables in the data.
+This is usually done to reduce the complexity of the model or to identify irrelevant
+variables.  The so-called \emph{curse of dimensionality} is a common problem in machine
+learning, where the number of variables is much larger than the number of observations.
+
+There are two main types of dimensionality reduction algorithms: feature selection and
+feature extraction.  The former is done by selecting a subset of the variables that leads
+to the best models.  The latter is done by creating new variables that are combinations
+of the original ones.
+
+Feature selection can be performed before modeling (filter), together with the model
+search (wrapper), or as a part of the model itself (embedded).
+
+Feature extraction is usually done by linear methods, such as principal component analysis
+(PCA), or by non-linear methods, such as autoencoders.  These methods are able to
+compress the information in the data into a smaller number of variables.
+
+\begin{slidebox}{Dimensionality reduction}{}
+  \begin{itemize}
+    \item Dimensionality reduction is the process of reducing the number of variables in the data;
+    \item Use feature selection to select a subset of the variables that leads to the best models;
+    \item Use feature extraction to create new variables that are combinations of the original ones.
+  \end{itemize}
+\end{slidebox}
 
 \begin{mainbox}{Practice!}
   Can you identify which data transformation operations are used to make datasets
